# marketplace-guard

./: .gitignore  AGENTS.md  CODEX_INSTRUCTIONS.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
examples/: .gitignore  run_example.py  run_marketplace_guard.py
examples/document_automation/: workflow.py
examples/document_automation/fixtures/: source_document.txt
examples/document_automation/tools/: __init__.py  download.py  extract.py  report.py  validate.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/app/: App.tsx  config.ts
frontend/src/components/actions/: ActionButton.tsx  ActionPanel.tsx  ApprovalModal.tsx
frontend/src/hooks/: useAlertActions.ts  useAlertDetail.ts  useAlerts.ts
frontend/src/lib/: api.ts  format.ts  mappers.ts
frontend/src/pages/: DashboardPage.tsx
frontend/src/types/: api.ts  ui.ts
src/marketplace_guard/: api.py  runtime.py  schemas.py  tools.py
src/marketplace_guard/db/: __init__.py  repository.py  schema.sql  seed.sql
src/marketplace_guard/domain/: __init__.py  detection.py
src/valaris_agent_system/: __init__.py
src/valaris_agent_system/policy/: __init__.py  engine.py
src/valaris_agent_system/runtime/: __init__.py  agent_runtime.py  app.py  errors.py  models.py  providers.py
src/valaris_agent_system/sessions/: __init__.py  store.py
src/valaris_agent_system/tools/: __init__.py  base.py  filesystem.py  registry.py  utility.py
tests/: test_marketplace_guard.py  test_policy.py  test_registry.py  test_runtime.py  test_sessions.py
(+15 files in other folders)
