[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valaris-agent-system"
version = "0.1.0"
description = "Starter kit for a typed tool registry, policy engine, and single agent runtime."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12,<3",
    "fastapi>=0.128,<1",
    "uvicorn>=0.39,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"marketplace_guard.db" = ["*.sql"]
